<resources>
    <string name="app_name" translatable="false">UptoNews</string>
    <string name="join_upto">Join UptoNews</string>
    <string name="welcome_upto">Welcome back to UptoNews</string>
    <string name="signup">Sign up</string>
    <string name="signup_google">Sign up with Google</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="signup_email">Sign up with E-mail</string>
    <string name="signin">Sign in</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="signin_email">Sign in with E-mail</string>
    <string name="already_have_account">Already have a account?</string>
    <string name="dont_have_account">Don\'t have a account?</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_email_address">Enter your e-mail</string>
    <string name="hint_password">Enter your password</string>
    <string name="continue_text">Continue</string>
    <string name="invalid_name">Name cannot be empty</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_password">Password too short</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="news_image_description">News Image</string>
    <string name="point" translatable="false">·</string>
    <string name="search_for_news">Search for news</string>
    <string name="type_topic">Enter a topic you are interested</string>
    <string name="categories">Categories</string>
    <string name="history">History</string>
    <string name="user_image">user image</string>
    <string name="display_language">Display Language</string>
    <string name="display_theme">Display Theme</string>
    <string name="favorites">Favorites</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="good_morning">Good Morning</string>
    <string name="error_loading_news">Error loading news</string>
    <string name="error_loading_categories">Error while loading available categories</string>
    <string name="error_loading_searched_news">Error while loading searched news</string>
    <string name="unexpected_error">A unexpected error occurred</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
=    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favorite">Favorite Button</string>
    <string name="exit_app">Exit App</string>
</resources>