<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.JoinFragment">

    <TextView
        android:id="@+id/join_upto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_upto"
        android:textColor="?colorOnPrimary"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_google_btn" />

    <Button
        android:id="@+id/signup_google_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_google"
        android:textColor="?colorOnPrimary"
        android:textAllCaps="false"
        android:backgroundTint="?colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_google"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_facebook_btn" />

    <Button
        android:id="@+id/signup_facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_facebook"
        android:textColor="?colorOnPrimary"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_facebook"
        android:backgroundTint="?colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/signup_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_email"
        android:textColor="?colorOnPrimary"
        android:textAllCaps="false"
        android:backgroundTint="?colorPrimaryVariant"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_facebook_btn" />

    <TextView
        android:id="@+id/already_have_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textSize="16sp"
        android:textColor="?colorOnPrimary"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_btn" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="16sp"
        android:textColor="?colorSecondary"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/signup_email_btn"
        app:layout_constraintStart_toEndOf="@id/already_have_account_text" />

</androidx.constraintlayout.widget.ConstraintLayout>