<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/settings_fragment_menu"
        app:title="@string/settings"
        app:titleTextColor="?colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/user_image"
                    android:minWidth="100dp"
                    android:minHeight="100dp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/display_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorPrimaryVariant"
                android:drawableLeft="@drawable/ic_baseline_language_24"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/display_language"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimary" />

            <Button
                android:id="@+id/display_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorPrimaryVariant"
                android:drawableLeft="@drawable/ic_baseline_brightness_6_24"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/display_theme"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimary" />

            <Button
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorPrimaryVariant"
                android:drawableLeft="@drawable/ic_baseline_favorite_border_24"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/favorites"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimary" />

            <Button
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorPrimaryVariant"
                android:drawableLeft="@drawable/ic_baseline_history_24"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>