<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.SignupFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="?colorOnError"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="?colorPrimaryVariant"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:paddingVertical="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimarySurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="?colorOnError"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_name_layout">

        <EditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="?colorPrimaryVariant"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:paddingVertical="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimarySurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="?colorOnError"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_email_layout">

        <EditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="?colorPrimaryVariant"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimarySurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>